--- a/kasa/src/components/Banner/banner.scss
+++ b/kasa/src/components/Banner/banner.scss
@@ -1,20 +1,24 @@
 @import "../../assets/variable.scss";
-
-.bannerHome {
+@mixin banner {
   max-width: 1240px;
   width: 100%;
   height: 223px;
   border-radius: 25px;
-  background-image: url("../../assets/ImageSource1.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
+.bannerHome {
+  background-image: url("../../assets/ImageSource1.svg");
+  @include banner;
   opacity: 0.6px;
   @media (max-width: 768px) {
-    width: 335px;
+    width: 338px;
     height: 111px;
     margin: 0;
+    padding: 0;
+    border-radius: 10px;
   }
 
   .bannertext {
@@ -33,20 +37,15 @@
     @media (max-width: 768px) {
       font-size: 24px;
       height: 111px;
+      border-radius: 10px;
+      padding-right: 90px;
     }
   }
 }
 
 .bannerApropos {
-  max-width: 1240px;
-  width: 100%;
-  height: 223px;
-  border-radius: 25px;
   background-image: url("../../assets/ImageSource2.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  box-shadow: 0px 4px 4px 0px #00000040;
+  @include banner;
   margin-bottom: 38px;
   @media (max-width: 768px) {
     width: 335px;
