--- a/kasa/src/components/Collapse/Collapse.scss
+++ b/kasa/src/components/Collapse/Collapse.scss
@@ -1,12 +1,25 @@
 @import "../../assets/variable.scss";
 
+@mixin collapse {
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  overflow: hidden;
+  background: $main-color;
+  color: white;
+  border: none;
+  font-weight: 700;
+  border-radius: 10px;
+}
+
 .accordion {
   border-radius: 5px;
   overflow: hidden;
   max-width: 1023px;
   margin: 0px 0 30px 0;
   padding: 0;
-  padding-bottom: 0px;
   font-family: $main-font;
   width: 100%;
   @media (max-width: 768px) {
@@ -18,28 +31,85 @@
     list-style-type: none;
   }
 
-  .libsub {
+  .logement_collapse {
     font-size: 18px;
-    width: 100%;
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 14px 15px 10px 15px;
-    overflow: hidden;
-    background: $main-color;
-    color: white;
-    border: none;
-    font-weight: 700;
-    border-radius: 10px;
+    padding: 15px 15px 15px 15px;
+    @include collapse;
+
     @media (max-width: 768px) {
       font-size: 12px;
       padding: 8px 15px 4px 15px;
     }
-    .btnsub {
+    .btnsub_up {
       border: none;
       background: $main-color;
       margin-right: 2em;
+      transition: transform 330ms ease-in-out;
+      &:active {
+        transform: rotate(0.5turn);
+      }
+      img {
+        @media (max-width: 768px) {
+          width: 15px;
+          width: 15px;
+        }
+      }
+    }
+
+    .btnsub_down {
+      border: none;
+      background: $main-color;
+      margin-right: 2em;
+      transition: transform 330ms ease-in-out;
+      transform: rotate(0.5turn);
+      &:active {
+        transform: rotate(0.5turn);
+      }
+
+      img {
+        @media (max-width: 768px) {
+          width: 15px;
+          width: 15px;
+        }
+      }
+    }
+  }
+
+  .Apropos_collapse {
+    font-size: 8px;
+    padding: 15px 15px 15px 15px;
+    @include collapse;
+
+    @media (max-width: 768px) {
+      font-size: 12px;
+      padding: 8px 15px 4px 15px;
+    }
+    .btnsub_up {
+      border: none;
+      background: $main-color;
+      margin-right: 2em;
+      transition: transform 330ms ease-in-out;
+      &:active {
+        transform: rotate(0.5turn);
+      }
+      img {
+        @media (max-width: 768px) {
+          width: 15px;
+          width: 15px;
+        }
+      }
+    }
+
+    .btnsub_down {
+      border: none;
+      background: $main-color;
+      margin-right: 2em;
+      transition: transform 330ms ease-in-out;
+      transform: rotate(0.5turn);
+      &:active {
+        transform: rotate(0.5turn);
+      }
+
       img {
         @media (max-width: 768px) {
           width: 15px;
@@ -55,11 +125,11 @@
     padding-bottom: 20px;
   }
 
-  .btnOpen > li {
+  .btnOpen > span {
     display: block;
     padding-top: 20px;
   }
-  .btnClose > li {
+  .btnClose > span {
     display: none;
   }
 }
