--- a/kasa/src/components/Footer/Footer.scss
+++ b/kasa/src/components/Footer/Footer.scss
@@ -5,7 +5,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 1440px;
+  max-width: 1440px;
+  width: 100%;
 
   .footer_text {
     color: white;
