--- a/kasa/src/components/Logement/Fiche.scss
+++ b/kasa/src/components/Logement/Fiche.scss
@@ -1,5 +1,10 @@
 @import "../../assets/variable.scss";
 
+.location {
+  max-width: 1240px;
+  width: 100%;
+}
+
 .locationdescription {
   display: flex;
   flex-direction: row;
@@ -8,6 +13,7 @@
   font-family: $main-font;
   width: 100%;
   margin-bottom: 27px;
+
   @media (max-width: 768px) {
     flex-direction: column;
     justify-content: center;
@@ -61,6 +67,8 @@
     flex-direction: column;
     align-items: flex-end;
     margin-top: 24px;
+    padding-right: 0px;
+    width: 100%;
     @media (max-width: 768px) {
       width: 100%;
       flex-direction: row-reverse;
@@ -104,8 +112,6 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 1440px;
-  width: 100%;
 
   @media (max-width: 768px) {
     flex-direction: column;
@@ -114,7 +120,8 @@
   }
 
   span {
-    width: 582px;
+    max-width: 582px;
+    width: 100%;
     @media (max-width: 1024px) {
       width: 290px;
     }
