--- a/kasa/src/components/Banner/banner.scss
+++ b/kasa/src/components/Banner/banner.scss
@@ -11,11 +11,12 @@
 
 .bannerHome {
   background-image: url("../../assets/ImageSource1.svg");
+  margin-top: 12px;
   @include banner;
   opacity: 0.6px;
   @media (max-width: 768px) {
     width: 338px;
-    height: 111px;
+    height: 112px;
     margin: 0;
     padding: 0;
     border-radius: 10px;
@@ -27,6 +28,7 @@
     font-weight: 700;
     color: white;
     background-color: black;
+    box-shadow: 0px 5px 3px #afafaf;
     opacity: 0.6;
     height: 223px;
     border-radius: 25px;
@@ -39,6 +41,7 @@
       height: 111px;
       border-radius: 10px;
       padding-right: 90px;
+      box-shadow: none;
     }
   }
 }
@@ -47,6 +50,7 @@
   background-image: url("../../assets/ImageSource2.svg");
   @include banner;
   margin-bottom: 38px;
+
   @media (max-width: 768px) {
     width: 335px;
     height: 111px;
