--- a/kasa/src/components/Footer/Footer.scss
+++ b/kasa/src/components/Footer/Footer.scss
@@ -7,15 +7,20 @@
   align-items: center;
   max-width: 1440px;
   width: 100%;
-
+  @media (max-width: 768px) {
+    width: 50%;
+    padding: 0 100px 50px 100px;
+  }
   .footer_text {
     color: white;
     font-family: $main-font;
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 29px;
-    @media (max-width: 375px) {
+    @media (max-width: 768px) {
       font-size: 12px;
+      padding: 0 125px 0 125px;
+      text-align: center;
     }
   }
   .footer_img {
@@ -23,5 +28,8 @@
     height: 39.44px;
     margin-top: 66px;
     margin-bottom: 43px;
+    @media (max-width: 768px) {
+      margin-bottom: 10px;
+    }
   }
 }
