--- a/kasa/src/components/Gallery/Gallery.scss
+++ b/kasa/src/components/Gallery/Gallery.scss
@@ -13,22 +13,23 @@
     background-position: center;
     background-size: cover;
     border-radius: 30px;
-
-    @media (max-width: 1024px) {
-      width: 100%;
-    }
     @media (max-width: 768px) {
       width: 335px;
       height: 255px;
     }
   }
   .slidedetails {
+    max-width: 1240px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     position: absolute;
-    width: 100%;
     z-index: 2;
+    @media (max-width: 768px) {
+      max-width: 335px;
+      top: 130px;
+    }
 
     &:active + .slidecontenair {
       transform: translate(-100%, 0%);
@@ -37,7 +38,7 @@
     &_arrow {
       border: none;
       background: none;
-      padding: 50px 23px 0px 23px;
+      padding: 0px 20px 0px 20px;
 
       &--img {
         width: 46.68px;
@@ -57,7 +58,7 @@
       font-family: $main-font;
       font-size: 18px;
       font-weight: 500;
-      padding-top: 350px;
+      padding-top: 365px;
       @media (max-width: 768px) {
         display: none;
       }
