--- a/kasa/src/components/Logement/Fiche.scss
+++ b/kasa/src/components/Logement/Fiche.scss
@@ -1,23 +1,19 @@
 @import "../../assets/variable.scss";
-
 .location {
   max-width: 1240px;
   width: 100%;
+  @media (max-width: 768px) {
+    max-width: 335px;
+  }
 }
-
 .locationdescription {
   display: flex;
-  flex-direction: row;
+  flex-direction: row wrap;
   justify-content: space-between;
-  max-width: 1440px;
   font-family: $main-font;
-  width: 100%;
-  margin-bottom: 27px;
-
   @media (max-width: 768px) {
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
+    flex-flow: column wrap;
+    margin-bottom: 11px;
   }
 
   .location {
@@ -37,52 +33,59 @@
       font-size: 18px;
       font-weight: 500;
       padding: 0;
-      margin-top: 7px;
-      margin-bottom: 24px;
+      margin-top: 6px;
+      margin-bottom: 22px;
       @media (max-width: 768px) {
         font-size: 14px;
         margin-top: 8px;
-        margin-bottom: 10px;
+        margin-bottom: 0px;
       }
     }
-    &_tag {
-      font-weight: 700;
-      color: white;
-      font-size: 14px;
-      background: $main-color;
-      width: 115px;
-      border-radius: 30px;
-      padding: 4px 10px 4px 10px;
-      margin-left: 0;
-      margin-right: 10px;
-      @media (max-width: 768px) {
-        font-size: 10px;
-        padding: 4px 10px 2px 10px;
+    &_tags {
+      display: flex;
+      flex-flow: row wrap;
+      &--list {
+        font-weight: 700;
+        color: white;
+        font-size: 14px;
+        background: $main-color;
+        margin-bottom: 24px;
+        border-radius: 30px;
+        padding: 4px 40px 3px 40px;
+        margin-left: 0;
+        margin-right: 10px;
+        @media (max-width: 768px) {
+          font-size: 10px;
+          padding: 4px 10px 2px 10px;
+          margin-top: 11px;
+          margin-bottom: 0px;
+        }
       }
     }
   }
-
   .locationhost {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin-top: 24px;
     padding-right: 0px;
+    max-width: 1240px;
     width: 100%;
     @media (max-width: 768px) {
-      width: 100%;
       flex-direction: row-reverse;
+      flex-wrap: wrap;
       align-items: center;
+      max-width: 335px;
       justify-content: space-between;
       margin-top: 4px;
-      margin-bottom: 11px;
+      margin-bottom: 0px;
     }
 
     &_id {
       display: flex;
       flex-direction: row;
       text-align: right;
-      margin-bottom: 5px;
+      margin-bottom: 2px;
     }
     &_name {
       font-weight: 500;
@@ -112,21 +115,22 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding-bottom: 20px;
 
   @media (max-width: 768px) {
     flex-direction: column;
     justify-content: center;
     align-items: start;
+    padding-bottom: 6px;
+    padding-top: 3px;
   }
 
   span {
     max-width: 582px;
     width: 100%;
-    @media (max-width: 1024px) {
-      width: 290px;
-    }
+
     @media (max-width: 768px) {
-      width: 335px;
+      max-width: 335px;
     }
   }
 }
