--- a/kasa/src/components/Gallery/Gallery.scss
+++ b/kasa/src/components/Gallery/Gallery.scss
@@ -2,6 +2,9 @@
 
 .slidershow {
   position: relative;
+  @media (max-width: 768px) {
+    margin-top: 10px;
+  }
 
   .slidecontenair {
     position: relative;
