--- a/kasa/src/components/Footer/Footer.scss
+++ b/kasa/src/components/Footer/Footer.scss
@@ -5,11 +5,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1440px;
+  max-width: 3000px;
   width: 100%;
+  margin-top: 8px;
+
   @media (max-width: 768px) {
-    width: 50%;
-    padding: 0 100px 50px 100px;
+    padding: 0 0px 50px 0px;
+    margin-top: 0px;
   }
   .footer_text {
     color: white;
