--- a/kasa/src/components/Banner/banner.scss
+++ b/kasa/src/components/Banner/banner.scss
@@ -8,20 +8,23 @@
   background-position: center;
   background-size: cover;
 }
+@mixin mq768 {
+  height: 112px;
+  border-radius: 10px;
+}
 
 .bannerHome {
+  @include banner;
   background-image: url("../../assets/ImageSource1.svg");
   margin-top: 12px;
-  @include banner;
   opacity: 0.6px;
   @media (max-width: 768px) {
+    @include mq768;
     width: 338px;
-    height: 112px;
     padding: 0;
-    border-radius: 10px;
   }
-
-  .bannertext {
+  &_text {
+    @include banner;
     font-family: $main-font;
     font-size: 48px;
     font-weight: 700;
@@ -29,25 +32,22 @@
     background-color: black;
     box-shadow: 0px 5px 3px #afafaf;
     opacity: 0.6;
-    height: 223px;
-    border-radius: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 16px;
     @media (max-width: 768px) {
+      @include mq768;
       font-size: 24px;
-      height: 111px;
-      border-radius: 10px;
-      padding-right: 90px;
+      padding: 0 90px 0 20px;
       box-shadow: none;
+      width: 228px;
     }
   }
 }
 
 .bannerApropos {
-  background-image: url("../../assets/ImageSource2.svg");
   @include banner;
+  background-image: url("../../assets/ImageSource2.svg");
   margin-bottom: 38px;
 
   @media (max-width: 768px) {
