--- a/kasa/src/components/Card/Card.scss
+++ b/kasa/src/components/Card/Card.scss
@@ -1,107 +1,99 @@
 @import "../../assets/variable.scss";
+@mixin imgform {
+  width: 340px;
+  height: 340px;
+  border-radius: 10px;
+}
+@mixin spacing {
+  margin: 0;
+  padding: 0;
+}
+@mixin mq768 {
+  width: 335px;
+  height: 255px;
+}
 
 .gallery {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
   margin: 43px 0px 40px 0px;
   padding-top: 31px;
   padding-bottom: 20px;
   background-color: #f6f6f6;
   border-radius: 30px;
   max-width: 1240px;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-
   @media (max-width: 1024px) {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
     padding: 56px 20px 18px 20px;
   }
   @media (max-width: 768px) {
-    display: flex;
     flex-flow: column;
     align-items: center;
     background-color: white;
     margin: 6px 0 0px 0;
     padding: 0px 0px 18px 0px;
   }
-}
 
-.gallery_card {
-  position: relative;
-  padding: 25px 30px 25px 30px;
-
-  max-width: 340px;
-  max-height: 340px;
-  width: 100%;
-  transition-duration: 600ms;
-  &:hover {
-    transform: scale(1.05);
-  }
-  @media (max-width: 768px) {
-    padding: 16px 0 0px 0;
-  }
-  .imggallery {
+  &_card {
     position: relative;
-    z-index: 1;
-    width: 340px;
-    height: 340px;
-    border-radius: 10px;
-    object-fit: cover;
-
-    @media (max-width: 1024px) {
-      margin-left: 0px;
-      padding-left: 0px;
+    padding: 25px 30px 25px 30px;
+    max-width: 340px;
+    max-height: 340px;
+    width: 100%;
+    transition-duration: 600ms;
+    &:hover {
+      transform: scale(1.05);
     }
     @media (max-width: 768px) {
-      width: 335px;
-      height: 255px;
-      margin: 0;
-      padding: 0px;
+      padding: 16px 0 0px 0;
     }
-  }
-
-  &--shadow {
-    background: linear-gradient(
-      180deg,
-      rgba(255, 255, 255, 0) 0%,
-      rgba(10, 10, 10, 0) 42%,
-      rgba(4, 4, 4, 0.205) 99.99%,
-      rgba(0, 0, 0, 0.5) 100%
-    );
-
-    border-radius: 15px;
-    width: 339px;
-    height: 340px;
-    border-radius: 10px;
-    position: absolute;
-    z-index: 2;
-    bottom: 26px;
-    margin: 0;
-    padding: 0px;
-    @media (max-width: 768px) {
-      width: 334px;
-      height: 255px;
-      margin: 0;
-      padding: 0px;
-      bottom: 5px;
+    &--img {
+      @include imgform;
+      z-index: 1;
+      object-fit: cover;
+      @media (max-width: 1024px) {
+        margin-left: 0px;
+        padding-left: 0px;
+      }
+      @media (max-width: 768px) {
+        @include spacing;
+        @include mq768;
+      }
     }
-  }
-  .imggallery_title {
-    position: absolute;
-    z-index: 2;
-    top: 300px;
-    font-family: $main-font;
-    font-size: 18px;
-    font-weight: 700;
-    color: #f6f6f6;
-    width: 300px;
-    padding-left: 20px;
-
-    @media (max-width: 768px) {
-      padding-left: 19px;
-      padding-bottom: 0px;
-      top: 220px;
+    &--shadow {
+      background: linear-gradient(
+        180deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(10, 10, 10, 0) 42%,
+        rgba(4, 4, 4, 0.205) 99.99%,
+        rgba(0, 0, 0, 0.5) 100%
+      );
+      @include imgform;
+      position: absolute;
+      z-index: 2;
+      bottom: 26px;
+      @include spacing;
+      @media (max-width: 768px) {
+        @include mq768;
+        @include spacing;
+        bottom: 5px;
+      }
+    }
+    &--title {
+      position: absolute;
+      z-index: 2;
+      top: 300px;
+      font-family: $main-font;
+      font-size: 18px;
+      font-weight: 700;
+      color: #f6f6f6;
+      width: 300px;
+      padding-left: 20px;
+      @media (max-width: 768px) {
+        padding-left: 19px;
+        padding-bottom: 0px;
+        top: 220px;
+      }
     }
   }
 }
