--- a/kasa/src/components/MsgError/Error.scss
+++ b/kasa/src/components/MsgError/Error.scss
@@ -7,39 +7,38 @@
   flex-direction: column;
   align-items: center;
   justify-content: first baseline;
+  font-weight: 500;
 
-  .msgerror_title {
+  &_title {
     font-size: 288px;
     font-weight: 700;
-    margin-top: 45px;
+    margin-top: 56px;
     margin-bottom: 97px;
     @media (max-width: 768px) {
       font-size: 96px;
-      margin-top: 75px;
-      margin-bottom: 115px;
+      margin-top: 87px;
+      margin-bottom: 107px;
     }
   }
-  .msgerror_text {
+  &_text {
     font-size: 36px;
-    font-weight: 500;
     margin-bottom: 145px;
     text-align: center;
     @media (max-width: 768px) {
       font-size: 18px;
-
-      margin-bottom: 120px;
+      padding: 0 50px;
+      margin-bottom: 117px;
     }
   }
-  .msgerror_link {
+  &_link {
     font-size: 18px;
-    font-weight: 500;
     color: black;
     text-decoration: none;
-    margin-bottom: 141px;
+    margin-bottom: 133px;
     text-decoration: underline;
     @media (max-width: 768px) {
       font-size: 14px;
-      margin-bottom: 115px;
+      margin-bottom: 114px;
     }
   }
 }
