--- a/kasa/src/components/Gallery/Gallery.scss
+++ b/kasa/src/components/Gallery/Gallery.scss
@@ -9,6 +9,7 @@
 }
 .slidershow {
   position: relative;
+  overflow: hidden;
   @media (max-width: 768px) {
     margin-top: 10px;
   }
@@ -22,6 +23,8 @@
     background-position: center;
     background-size: cover;
     border-radius: 30px;
+    transition: transform 330ms ease-in-out;
+
     @media (max-width: 768px) {
       @include mq768;
       height: 255px;
@@ -34,6 +37,9 @@
     justify-content: space-between;
     position: absolute;
     z-index: 2;
+    &:active + .slidecontenair {
+      transform: translatex(100%);
+    }
     @media (max-width: 768px) {
       @include mq768;
       top: 130px;
