--- a/kasa/src/components/Collapse/Collapse.scss
+++ b/kasa/src/components/Collapse/Collapse.scss
@@ -18,6 +18,16 @@
   padding: 7px 15px 7px 15px;
 }
 
+@mixin animnopen {
+  transform: translatey(-50%);
+  display: none;
+}
+@mixin animclose {
+  transform: translatey(-100%);
+  height: 0px;
+  color: transparent;
+  background-color: none;
+}
 .collapse {
   border-radius: 5px;
   overflow: hidden;
@@ -27,33 +37,17 @@
   font-family: $main-font;
   width: 100%;
   @media (max-width: 768px) {
-    max-width: 1023px;
     margin: 0px 0 20px 0;
   }
 
-  .logement_collapse {
-    @include collapseform;
-    font-size: 18px;
-    padding: 15px 15px 15px 15px;
-    @media (max-width: 768px) {
-      @include mq768;
-    }
-  }
-  .Apropos_collapse {
-    @include collapseform;
-    font-size: 24px;
-    padding: 13px 15px 10px 15px;
-    @media (max-width: 768px) {
-      @include mq768;
-    }
-  }
-  &_down {
+  &_up {
     transform: rotate(0.5turn);
   }
   &_up,
   &_down {
-    margin-right: 32px;
-    transition: transform 330ms ease-in-out;
+    padding-left: 32px;
+    padding-right: 32px;
+    transition: transform 150ms;
     &:active {
       transform: rotate(0.5turn);
     }
@@ -64,18 +58,50 @@
       }
     }
   }
+  .logement_collapse {
+    @include collapseform;
+    font-size: 18px;
+    padding: 15px 15px 15px 15px;
+    &:active + .collapse_open {
+      @include animnopen;
+    }
+    &:active + .collapse_close {
+      @include animclose;
+    }
+    @media (max-width: 768px) {
+      @include mq768;
+    }
+  }
+
+  .Apropos_collapse {
+    @include collapseform;
+    font-size: 24px;
+    padding: 13px 15px 10px 15px;
+    &:active + .collapse_open {
+      @include animnopen;
+    }
+    &:active + .collapse_close {
+      @include animclose;
+    }
+    @media (max-width: 768px) {
+      @include mq768;
+    }
+  }
 
   .collapse_open {
-    background-color: rgb(248, 248, 248);
     list-style-type: none;
     padding-bottom: 20px;
-
+    transform: translatey (0%);
+    transition: 0.5s;
+    opacity: 1;
+    background-color: rgb(248, 248, 248);
     & > span {
       display: block;
       padding-top: 20px;
     }
   }
   .collapse_close > span {
+    transition: 0.5s;
     display: none;
   }
 }
